--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -68,8 +68,8 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID  }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: dockereb-test
-        environment_name: dockereb-test-env
+        application_name: dockerdb-test
+        environment_name: dockerdb-test-env
         version_label: Github Action-${{steps.current-time.outputs.formattedTime}}
         region: ap-northeast-2
         deployment_package: deploy.zip
